examples/test/testpolicy13513.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13513
  namespace: namespace441
spec:
  podSelector:
    matchLabels:
      key13: value6
      key43: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value22
          key48: value38
      podSelector:
        matchLabels:
          key20: value35
